; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_actions.c_init_action.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_actions.c_init_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\09\00", align 1
@KEY_UNSET = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"Key \22%s\22 unrecognized\00", align 1
@EEXIST = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [35 x i8] c"Key \22%s\22 bound to multiple actions\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8**, i8*, i32)* @init_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_action(i32* %0, i8** %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i8* @var_InheritString(i32* %13, i8* %14)
  store i8* %15, i8** %9, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  br label %52

19:                                               ; preds = %4
  %20 = load i8*, i8** %9, align 8
  %21 = call i8* @strtok_r(i8* %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %10)
  store i8* %21, i8** %11, align 8
  br label %22

22:                                               ; preds = %47, %19
  %23 = load i8*, i8** %11, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %49

25:                                               ; preds = %22
  %26 = load i8*, i8** %11, align 8
  %27 = call i64 @vlc_str2keycode(i8* %26)
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = load i64, i64* @KEY_UNSET, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %35

31:                                               ; preds = %25
  %32 = load i32*, i32** %5, align 8
  %33 = load i8*, i8** %11, align 8
  %34 = call i32 @msg_Warn(i32* %32, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %33)
  br label %47

35:                                               ; preds = %25
  %36 = load i8**, i8*** %6, align 8
  %37 = load i64, i64* %12, align 8
  %38 = load i32, i32* %8, align 4
  %39 = call i64 @add_mapping(i8** %36, i64 %37, i32 %38)
  %40 = load i64, i64* @EEXIST, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %35
  %43 = load i32*, i32** %5, align 8
  %44 = load i8*, i8** %11, align 8
  %45 = call i32 @msg_Warn(i32* %43, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i8* %44)
  br label %46

46:                                               ; preds = %42, %35
  br label %47

47:                                               ; preds = %46, %31
  %48 = call i8* @strtok_r(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %10)
  store i8* %48, i8** %11, align 8
  br label %22

49:                                               ; preds = %22
  %50 = load i8*, i8** %9, align 8
  %51 = call i32 @free(i8* %50)
  br label %52

52:                                               ; preds = %49, %18
  ret void
}

declare dso_local i8* @var_InheritString(i32*, i8*) #1

declare dso_local i8* @strtok_r(i8*, i8*, i8**) #1

declare dso_local i64 @vlc_str2keycode(i8*) #1

declare dso_local i32 @msg_Warn(i32*, i8*, i8*) #1

declare dso_local i64 @add_mapping(i8**, i64, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
